# sentence-transformers-cached-server

./: Dockerfile  LICENSE  Makefile  README-ja.md  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  requirements.txt  settings.py
