[tool.poetry]
name = "sentence-transformers-cached-server"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
